--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <head>
     <title>Yellow Sheet Creator</title>
     <meta name="author" content="Connor Leftwich">
-    <link rel="icon" href="school_logo.png" type="image/png" />
+    <link rel="icon" href="school_logo.png" type="image/png">
 	<link rel="stylesheet" type="text/css" href="style.css">
-    <script src="styleScript.js" defer></script>
-    <script src="script.js" defer></script>
-    <script src="navScript.js" defer></script>
+    <script src="assets/scripts/styleScript.js" defer></script>
+    <script src="assets/scripts/script.js" defer></script>
+    <script src="assets/scripts/navScript.js" defer></script>
 </head>
 
 <body>
