--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <head>
     <title>Yellow Sheet Creator</title>
     <meta name="author" content="Connor Leftwich">
-    <link rel="icon" href="school_logo.png" type="image/png">
-	<link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="icon" href="assets/images/school_logo.png" type="image/png">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <script src="assets/scripts/styleScript.js" defer></script>
     <script src="assets/scripts/script.js" defer></script>
     <script src="assets/scripts/navScript.js" defer></script>
