Added Save and Load Data buttons and associated css

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <input class="fileInput" type="file" name="file3" id="rosfile"/>
                 
                     <label class="fileLabel" for="calc">Update Table:</label>
-                    <input class="calc_button" id="calc" type="button" value="Load Files"/>
+                    <input class="resetButton button" id="resetButton" type="button" value="Reset Table"/>
                     
                 </fieldset>
             </div>
@@ -73,6 +73,13 @@
                         <label class="hexLabel" for="hexterSelect6">Hexter 6:</label>
                         <input type="radio" id="hexterSelect6" name="hexSelect" value="hex6">
                     </div>
+                </fieldset>
+            </div>
+            <div class="optionBoxes">
+                <fieldset class="databaseButton" id="databaseButton">
+                    <legend>Save or Load Data:</legend>
+                    <input type="button" value="Save Data" name="saveData" id="saveData" class="dbButton greenButton button">
+                    <input type="button" value="Load Data" name="loadData" id="loadData" class="dbButton redButton button">
                 </fieldset>
             </div>
         </div>
